// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic test additional slices work in main 1`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
        "key_mySlice",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$",
        },
        "metadata": {
          "_metadata": {
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_<PURGED>$",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
]
`;

exports[`basic test having a sync slice in main but no replica 1`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
]
`;

exports[`basic test one slice sync - case 1 1`] = `
[
  {
    "actionId": "increment",
    "dispatcher": undefined,
    "payload": [],
    "sourceSliceKey": "key_testSlice1",
    "store": "test-main",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "actionId": "ready",
    "dispatcher": "watch-in-main(changeEffect)",
    "payload": [],
    "sourceSliceKey": "key_watch-in-main",
    "store": "test-main",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-main(changeEffect)",
    "source": [
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
      {
        "actionId": "ready",
        "lineageId": "l_watch-in-main$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
  {
    "actionId": "increment",
    "dispatcher": "watch-in-main(changeEffect)",
    "payload": [],
    "sourceSliceKey": "key_testSlice1",
    "store": "test-main",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-main(changeEffect)",
    "source": [
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
]
`;

exports[`basic test one slice sync - case 1 3`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$1",
        },
        "metadata": {
          "_metadata": {
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_<PURGED>$1",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$2",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-main(changeEffect)",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_<PURGED>$2",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
]
`;

exports[`basic test one slice sync - case 2 - replica slice depends on sync slice 1`] = `
[
  {
    "actionId": "ready",
    "dispatcher": "watch-in-replica-store(changeEffect)",
    "payload": [],
    "sourceSliceKey": "key_watch-in-replica-store",
    "store": "test-replica-store-1",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "actionId": "increment",
    "dispatcher": undefined,
    "payload": [],
    "sourceSliceKey": "key_testSlice1",
    "store": "test-main",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-replica-store(changeEffect)",
    "source": [
      {
        "actionId": "ready",
        "lineageId": "l_watch-in-replica-store$",
      },
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
  {
    "actionId": "increment",
    "dispatcher": "watch-in-replica-store(changeEffect)",
    "payload": [],
    "sourceSliceKey": "key_testSlice1",
    "store": "test-replica-store-1",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-replica-store(changeEffect)",
    "source": [
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
]
`;

exports[`sync queuing with a send delay in main & replica 1`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$8",
        },
        "metadata": {
          "_metadata": {
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_<PURGED>$8",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$9",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-main-store(changeEffect)",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_<PURGED>$9",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_testSlice1$",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-replica-store(changeEffect)",
            "store-name": "test-replica-store-1",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_testSlice1$",
        "uid": "<<UID>>",
      },
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceKey": "key_testSlice1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$10",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-replica-store(changeEffect)",
            "store-name": "test-replica-store-1",
          },
        },
        "payload": [],
        "sourceSliceKey": "key_testSlice1",
        "targetSliceLineage": "l_<PURGED>$10",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
]
`;
